静态工厂和示例化工厂

--- a/spring-di-01/README
+++ b/spring-di-01/README
@@ -28,7 +28,14 @@ Spring  DI  依赖注入（侧重点：属性）
 			</bean>
 					
 					
-					
+	第三种方式：
+		静态工厂注入
+		
+		首先创建静态工厂
+		
+		
+		在实现setter注入
+		
 			
 		
 		
