--- a/spring-tx-02/README
+++ b/spring-tx-02/README
@@ -42,6 +42,26 @@ Spring事务管理机制
 	
 	
 	
+	
+模拟购物
+
+	用户购买商品
+	
+		用户余额 - 商品价格
+		
+		结果：
+			扣除用户余额  
+			扣除商品库存
+			
+异常维度：
+	1、 	扣除用户余额失败
+	2、 	扣除商品库存失败	
+
+	上述的异常均发生 事务回滚
+		
+			
+		
+	
 		
 	
 	
